--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,8 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+
+# This file lists all individuals having contributed content to the repository.
+# For how it is generated, see `hack/generate-authors.sh`.
+
+Camilo Andres Valencia Padilla <camilovalenciapadilla@gmail.com>
